# SwarmClone

./: .gitignore  API.txt  Cargo.toml  README.md  build.py  config.example.toml  config.json  config.json.example  config.yml  get_cosyvoice_reqs.py  get_req.py  main.py  pyproject.toml  requirements.txt
.docs/: changelog.md
.github/: CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_zh-cn.md  CONTRIBUTING.md  CONTRIBUTING_zh-cn.md
.github/workflows/: build-windows.yml  build.yml
Live2D_ModelController/: model_UnityPackage.unitypackage
Live2D_ModelController/Script/: Chat_Manager.cs  Model_Manager.cs
backend/: .gitignore  __init__.py  __main__.py  build.py  main.py  pyproject.toml
backend/src/: base_module.py  controller.py  main.py  message.py  module_manager.py
backend/src/api/: server.py
backend/src/api/routers/: config.py  health.py  io.py
backend/src/core/: __init__.py  config_manager.py  controller.py  event_bus.py  module_manager.py
backend/src/framework/: apiserver.py  base_module.py  config_manager.py  controller.py  logger.py  message.py  module_manager.py
backend/src/modules/ai/: __init__.py  test.py
backend/src/modules/example_api/: example_api.py  module.ini
backend/src/modules/sample/: sample.py
config/: default.toml  server_settings.toml  server_settings.toml.example
crates/core/: Cargo.toml
crates/core/src/: main.rs
crates/llm/: Cargo.toml
crates/speech/: Cargo.toml
crates/speech/src/: asr.rs  config.rs  error.rs  lib.rs  tts.rs  vad.rs
crates/utils/: Cargo.toml
dashboard/: README.md  package-lock.json  package.json  tsconfig.web.json
desktop/: icon.svg.import  project.godot
docs/: API_REFERENCE.md  ARCHITECTURE.md  MODULE_GUIDE.md  README_en.md  changelog.md  package-lock.json  package.json
frontend/: icon.svg.import  package-lock.json  package.json  project.godot
frontend/src/: main.ts
res/: hiyori.json
res/hiyori/: action.json
samples/: dummy01.md  dummy02.md  manifest.json.md  sample01.md  sample02.md
scripts/: ckenv.sh  get_req.py  ibpyd.sh  install-dev.sh  sync.sh
src/: .gitignore  main.py  request_parser.py
src/api/: server.py
src/asr/: __main__.py
src/asr_dummy/: __main__.py
src/backend/: __main__.py
src/common/: config_manager.py
src/config/: global_config.py
src/core/: api_server.py  app_factory.py  application.py  base_module.py  config_manager.py  controller.py  event_bus.py  logger.py  message.py  module_manager.py  routing.py
swarmclone/: README.md  __init__.py  __main__.py  bilibili_chat.py  config.py  constants.py  controller.py  frontend_http.py  frontend_live2d.py  frontend_socket.py  llm.py  llm_minilm2.py  messages.py  module_bootstrap.py  module_manager.py  modules.py  ncatbot_modules.py  parameters_controller.py  plugins.py  request_parser.py  tts_edge.py  types.py  utils.py
template/: config.toml.example
(+123 files in other folders)
