[project]
name = "swarmclonebackend"
version = "0.4.0"
description = "Project SwarmClone - An AI system for building AI Streamers and more"
license = "Apache-2.0"
requires-python = ">=3.13"

dependencies = [
    "quart>=0.20.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    "python-dotenv>=1.0.0",
    "hypercorn>=0.18.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]
