[project]
name = "swarmclone"
version = "0.4.0"
description = "Project SwarmClone - An AI system for building AI Streamers and more"
license = "Apache-2.0 license"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "ruamel-yaml>=0.18.16",
]

[project.optional-dependencies]
dev = [
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
