[package]
name = "core"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
utils = { path = "../utils" }
llm = { path = "../llm" }
speech = { path = "../speech" }
axum = { version = "0.7", features = ["ws"] }
base64 = "0.22"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
