[package]
name = "speech"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
toml = "1"
uuid = { version = "1", features = ["v4"] }
